--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -10,7 +10,8 @@
 		<%= link_to "Events Companies", events_companies_path %> | 
 		<%= link_to "Themes", themes_path %> |
 		<%= link_to "Venues", venues_path %> | 
-        <%= link_to "Studios", studios_path %>
+        <%= link_to "Studios", studios_path %> |
+        <%= link_to "Pricing Structures", pricing_structures_path %>
 		</p>
         <div class="btn-group" data-toggle="buttons">
             <% City::REGIONS.each do |region| %>  
