--- a/app/views/booking_events/_form.html.erb
+++ b/app/views/booking_events/_form.html.erb
@@ -16,7 +16,7 @@
 	<div class = "col-md-12">
 	  <div class="form-group">
 			<%= f.label :occurred_at %><br />
-			<%= f.date_select :occurred_at, {:class=>"form-control"} %>
+			<%= f.date_select :occurred_at, {:class=>"form-control", :order => [:day, :month, :year]} %>
 		</div>
 	</div>
 </div>
