--- a/app/views/bookings/_booking_row.html.erb
+++ b/app/views/bookings/_booking_row.html.erb
@@ -55,8 +55,43 @@
 							:booking_id => booking.id}
 						%>
 					</td>
-					<td><%= render partial: "account_summary", locals: {booking: booking} %></td>
-					<td> <!-- Actions  -->
+
+					<td><p><%= booking.pricing_structure.name %> expires <%= booking.pricing_structure.expiry_date.to_s(:standard) %>
+                      <% if booking.pricing_structure.expiry_date < Date.today %>
+                        <span class="label label-danger">Expired</span>
+                      <% end %>
+                      </p>
+                      <% if booking.timeslot.present? and booking.no_guests > 0 %>
+                        <% if booking.invoice.nil? %>
+                          <p><%= link_to 'Create invoice', new_invoice_path({:booking_id => booking.id}) %></p>
+                            <% else %>
+                              <p>Invoice <%= booking.invoice.id %> issued <%= booking.invoice.invoice_date.to_s(:standard) %></p>
+                              <table class="table table-condensed">
+                                <tr><td><%= booking.theme.name %></td><td><%= number_to_currency(booking.invoice.total, unit: "&pound;") %></td></tr>
+                                <tr><td>Received</td><td><%= number_to_currency(booking.invoice.total_received, unit: "&pound;") %></td></tr>
+                                <tr><td>Outstanding</td><td><%= number_to_currency(booking.invoice.amount_outstanding, unit: "&pound;") %></td></tr>                     
+                                <tr><td>Deposit Due</td><td><%= booking.invoice.deposit_due_date.to_s(:standard) %>
+                                  <% if booking.invoice.deposit_paid? %>
+                                    <span class="label label-success">Paid</span>
+                                  <% elsif booking.invoice.deposit_due_date < Date.today %>
+                                    <span class="label label-danger">Late</span>
+                                  <% end %>
+                                  </td></tr>                     
+                                <tr><td>Balance Due</td><td><%= booking.invoice.balance_due_date.to_s(:standard) %>
+                                  <% if booking.invoice.balance_paid? %>
+                                    <span class="label label-success">Paid</span>
+                                  <% elsif booking.invoice.balance_due_date < Date.today %>
+                                    <span class="label label-danger">Late</span>
+                                  <% end %>
+                                </td></tr>                     
+                              </table>
+                            <p><%= link_to 'Invoice details', edit_invoice_path(booking.invoice) %></p>
+                          <% end %>
+                        <% else %>
+                          <p><span class ="text-muted">Booking needs a timeslot and guest number in order to create an invoice</span></p>
+                        <% end %>  
+                    </td>
+                    <td> <!-- Actions  -->
 				        <p><%= link_to 'Edit booking', edit_booking_path(booking) %></p>
                       
                         <% if booking.timeslot.present? %>
@@ -65,21 +100,15 @@
                           <p><span class ="text-muted">Studio calendar</span></p>
                         <% end %>
                       
-                        <% if booking.timeslot.present? and booking.studio.present? and booking.theme.present? and booking.no_guests > 0  and !booking.invoice.nil? %>
-                          <p><%= link_to 'Booking form', booking_form_booking_path(booking) %></p>
+                        <% if booking.timeslot.present? and booking.studio.present? and booking.theme.present? and booking.no_guests > 0  and booking.invoice.present? %>
+                          <p><%= link_to 'Booking invoice form', booking_form_booking_path(booking) %></p>
                         <% else %>
                           <p><span class ="text-muted">Booking form</span></p>
                         <% end %>
-                      
-                        <% if booking.timeslot.present? and booking.no_guests > 0 %>
-                          <% if booking.invoice.nil? %>
-                            <p><%= link_to 'Create invoice', new_invoice_path({:booking_id => booking.id}) %></p>
-                          <% else %>
-                            <p><%= link_to 'Invoice', invoice_path(booking.invoice) %></p>
-                          <% end %>
+                      <% if booking.timeslot.present? and booking.studio.present? and booking.coach.present? and booking.theme.present? and booking.no_guests > 0  and booking.invoice.present? %>
+                          <p><%= link_to 'Job sheet', job_sheet_booking_path(booking) %></p>
                         <% else %>
-                          <p><span class ="text-muted">Create invoice</span></p>
+                          <p><span class ="text-muted">Job sheet</span></p>
                         <% end %>
-              
 					</td>
 				</tr>
