--- a/app/views/cities/_form.html.erb
+++ b/app/views/cities/_form.html.erb
@@ -28,7 +28,7 @@
     <div class = "col-md-4">
 		<div class="form-group">
 			<%= f.label :latitude %><br />
-			<%= f.number_field :latitude %>
+			<%= f.number_field :latitude, :step => "0.0001" %>
 		</div>
 	</div>
 </div>
