--- a/app/views/coaches/_form.html.erb
+++ b/app/views/coaches/_form.html.erb
@@ -32,7 +32,7 @@
 		</div>
 		<div class="form-group">
 			<%= f.label :day_rate %><br />
-			<%= f.number_field :day_rate, {:class=>"form-control"} %>
+			<%= f.number_field :day_rate, {:class=>"form-control", :step => "0.01"} %>
 		</div>
 	</div>
 	<div class = "col-md-6">
