--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>CheerleadingCoDatabase</title>
+  <title>Pom Pom - The Cheerleading Company Database</title>
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
 
@@ -19,6 +19,6 @@
 	<script type="text/javascript" src='http://code.jquery.com/jquery-1.8.2.js'></script>
 	<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
 	<%= javascript_include_tag "bookings" %>
-    <%= javascript_include_tag "line_items" %>
+    <%= javascript_include_tag "service_provided_line_items" %>
 </body>
 </html>
