trying to precompile logo.png

--- a/app/views/bookings/booking_form.html.erb
+++ b/app/views/bookings/booking_form.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-<!-- <%= image_tag "logo.png", style:"float:right", size: "220x103" %> -->
+<%= image_tag "logo.png", style:"float:right", size: "220x103" %>
 <h1>Party Booking Invoice</h1>
 <div class = "row">
   <div class = "col-md-6">
