--- a/app/views/shared/_deposit_due_date.html.erb
+++ b/app/views/shared/_deposit_due_date.html.erb
@@ -2,6 +2,6 @@
     <% if invoice.deposit_due_date < Date.today %>
       <span class="label label-danger">Deposit Due</span>
     <% end %>
-    <% if invoice.deposit_due_date > @invoice.booking.pricing_structure.expiry_date %>
+    <% if invoice.booking.pricing_structure.expiry_date.present? && invoice.deposit_due_date > invoice.booking.pricing_structure.expiry_date %>
       <span class="label label-danger">Deposit Due after Offer Expires</span>
     <% end %>
