Fixed bug: deposit due area checks booking has invoice

--- a/app/views/bookings/_bookings.html.erb
+++ b/app/views/bookings/_bookings.html.erb
@@ -12,12 +12,12 @@
   </tr>
   <% Booking.dates_of_balance_due_bookings(@filtered_regions).each do |date| %>
     <tr><td colspan=6><h3><%= date.to_s(:standard) %></h3></td></tr>
-    <% Booking.orderedByTimeslotOn(@filtered_regions, date).select { |booking| booking.invoice.balance_due_date < Date.today }.each do |booking| %>
+    <% Booking.orderedByTimeslotOn(@filtered_regions, date).select { |booking| booking.invoice.present? && booking.invoice.balance_due_date < Date.today }.each do |booking| %>
       <%= render partial: "booking_row", :locals => {:booking => booking} %>
     <% end %>
   <% end %>
   <tr><td colspan=6><h3>Timeslot TBC</h3></td></tr>
-    <% Booking.orderedByTimeslotOn(@filtered_regions, nil).select { |booking| booking.invoice.balance_due_date < Date.today }.each do |booking| %>
+    <% Booking.orderedByTimeslotOn(@filtered_regions, nil).select { |booking| booking.invoice.present? && booking.invoice.balance_due_date < Date.today }.each do |booking| %>
     <%= render partial: "booking_row", :locals => {:booking => booking} %>
   <% end %>
 </table>
@@ -39,11 +39,11 @@
   </tr>
   <% Booking.dates_of_deposit_due_bookings(@filtered_regions).each do |date| %>
     <tr><td colspan=6><h3><%= date.to_s(:standard) %></h3></td></tr>
-    <% Booking.orderedByTimeslotOn(@filtered_regions, date).select { |booking| booking.invoice.deposit_due_date < Date.today }.each do |booking| %>
+    <% Booking.orderedByTimeslotOn(@filtered_regions, date).select { |booking| booking.invoice.present? && booking.invoice.deposit_due_date < Date.today }.each do |booking| %>
       <%= render partial: "booking_row", :locals => {:booking => booking} %>
     <% end %>
     <tr><td colspan=6><h3>Timeslot TBC</h3></td></tr>
-      <% Booking.orderedByTimeslotOn(@filtered_regions, nil).select { |booking| booking.invoice.deposit_due_date < Date.today }.each do |booking| %>
+      <% Booking.orderedByTimeslotOn(@filtered_regions, nil).select { |booking| booking.invoice.present? && booking.invoice.deposit_due_date < Date.today }.each do |booking| %>
       <%= render partial: "booking_row", :locals => {:booking => booking} %>
     <% end %>
   <% end %>
